downward.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: payment
spec:
  containers:
    - name: api
      image: johnojss/myapp:8
      resources:
        limits:
          memory: "64Mi"
          cpu: "100m"
      ports:
      - containerPort: 8060
  restartPolicy: Never
