loadtest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadtest
  namespace: payment
spec:
  selector:
    matchLabels:
      app: loadtest
  template:
    metadata:
      labels:
        app: loadtest
    spec:
      containers:
      - name: loadtest
        image: aditirvan/load-test:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
          requests:
            memory: "16G"
            cpu: "8"
        ports:
        - containerPort: 80
