deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: payment
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: johnojss/myapp:8
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 8060

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: payment
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8060
