payment-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: payment
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
